# photoviewer

./: .gitignore  LICENSE  README.md  TODO  assets.py  autostart  autostart.txt  check_heartbeat.py  fullimage.py  image.py  install.sh  main.html  main.html.template  photo.cfg  photo.cfg.template  photo.py  photo_aliases  photoviewer.service  pyproject.toml  requirements.txt  spt.py  timers.py  utils.py
