[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | _build
    | build
    | dist
  )/
)
'''

[tool.poetry]
name = "photoviewer"
version = "1.1.0"
description = "Photoviewer client application"
authors = ["Ed Leafe <ed@leafe.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
etcd3 = "^0.12.0"
httpx = "^0.25.0"
protobuf = "3.20.3"
grpcio = "1.44.0"
pip = "^23.3.1"
black = "^23.12.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest-pudb = "^0.7.0"
ipython = "^8.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
